tests/miz/fail/parser/fail_parser_property_clauses_recovery_001.miz
definition
  symmetry;
  commutativity junk;
  sethood by;
  reflexivity proof
  end
  irreflexivity by Ref;
end;
